# puzzle-reminder

./: .gitignore  README.md  README.ru.md  example.env  get-schema.sh  pyproject.toml  queries.graphql  reminder.py  schema.graphql
